force-app/main/default/objects/Engagement_Grid_Setting__mdt/Engagement_Grid_Setting__mdt.object-meta.xml
<CustomObject>
	<label>Engagement Grid Setting</label>
	<pluralLabel>Engagement Grid Settings</pluralLabel>
</CustomObject>