force-app/main/default/objects/Engagement_Grid_Setting__mdt/fields/Date_Range_Start__c.field-meta.xml
<CustomField>
	<fullName>Date_Range_Start__c</fullName>
	<inlineHelpText>Start date for the calculation of RFM</inlineHelpText>
	<label>Date Range Start</label>
	<type>Date</type>
</CustomField>