force-app/main/default/objects/Engagement_Grid_Setting__mdt/fields/Re_Calculation_Due__c.field-meta.xml
<CustomField>
	<fullName>Re_Calculation_Due__c</fullName>
	<defaultValue>false</defaultValue>
	<inlineHelpText>Is RFM re-calculation due?</inlineHelpText>
	<label>Re-Calculation Due</label>
	<type>Checkbox</type>
</CustomField>