force-app/main/default/objects/Engagement_Grid_Setting__mdt/fields/Report_Id__c.field-meta.xml
<CustomField>
	<fullName>Report_Id__c</fullName>
	<inlineHelpText>This will be the report unique ID that is linked on the visualisation for drill down.</inlineHelpText>
	<label>Report Id</label>
	<length>18</length>
	<type>Text</type>
</CustomField>