force-app/main/default/objects/Engagement_Grid_Setting__mdt/fields/Y_Axis__c.field-meta.xml
<CustomField>
	<fullName>Y_Axis__c</fullName>
	<defaultValue>&quot;EngGrid_Frequency_Score__c&quot;</defaultValue>
	<label>Y Axis</label>
	<length>55</length>
	<type>Text</type>
</CustomField>